# ext_ros2_yolo_ros

./: DEPRECATED_rknn_toolkit_and_yolo_installation.txt  README_yolo_ros_installation.md  rknn_toolkit_and_yolo_installation.txt
yolo_bringup/: CMakeLists.txt
yolo_bringup/launch/: bringup_camera_launch.py  yolo.launch.py  yolov11.launch.py  yolov11_opi.launch.py
yolo_bringup/models/yolo11n_rknn_model/: metadata.yaml
yolo_bringup/models/yolo11s_rknn_model/: metadata.yaml
yolo_ros/yolo_ros/: debug_node.py  yolo_node.py
